# QueryMind

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.postgres  init_tpch.sql  prometheus.yml
notebooks/: analysis.ipynb
querymind/: __init__.py  config.py
querymind/agent/: __init__.py  callbacks.py  policy.py  train.py
querymind/api/: __init__.py  main.py
querymind/benchmark/: __init__.py  report.py  runner.py  tpch_loader.py
querymind/featurizer/: __init__.py  encoder.py  query_parser.py  stats_extractor.py
scripts/: load_tpch.sh
tests/: __init__.py  test_hint_builder.py  test_query_parser.py  test_tpch_loader.py
